add more structure to html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
 <link rel="stylesheet" href="styling.css">
 </head>
-<div class="header-section"> Header <section></section></div>
+    <div class="headerholder"> 
+        <div class="header"> Header portion inside of holder</div>
+    </div>
 <body>
-    <p>Body section</p>
+    <div class="bodyholder">
+
+        <div class="bodysectionholder">
+            <div class="bodysection"> body section</div>
+            <div class="bodysection2"> body section 2</div>
+        </div>
+    </div>
+    <div class="secondbodyholder">
+        <div class="secondbody">secondbody inside holder</div>
+    </div>
 </body>
 
 </html>
