Add portions to header section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" href="styling.css">
 </head>
     <div class="headerholder"> 
-        <div class="header"> Header portion inside of holder</div>
+            <div class="firstheaderhalfholder">first header half holder</div>
+            <div class="secondheaderhalfholder">second header half holder</div>
     </div>
 <body>
     <div class="bodyholder">
@@ -15,7 +16,7 @@
         </div>
     </div>
     <div class="secondbodyholder">
-        <div class="secondbody">secondbody inside holder</div>
+        <div class="secondbody">paragraph here</div>
     </div>
 </body>
 
