Add drop down menus to header section

--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
 <head>
 <link rel="stylesheet" href="styling.css">
 </head>
+<!-- Header portion-->
     <div class="headerholder"> 
-            <div class="firstheaderhalfholder">first header half holder</div>
+            <div class="firstheaderhalfholder">
+                <!--Creates dropdown, need to understand the purpose of a button, when hovered over dropdown 1 it works-->
+                <div class="dropdown1">
+                    <button class="DDButton1">Dropdown</button>
+                    <div class="DDB1content">
+                      <a href="#">Link 1</a>
+                      <a href="#">Link 2</a>
+                      <a href="#">Link 3</a>
+                    </div>
+                  </div>
+                  <div class="dropdown1">
+                    <button class="DDButton1">Dropdown</button>
+                    <div class="DDB1content">
+                      <a href="#">Link 1</a>
+                      <a href="#">Link 2</a>
+                      <a href="#">Link 3</a>
+                    </div>
+                  </div>
+            </div>
+<!--Second half of the header portion-->
             <div class="secondheaderhalfholder">second header half holder</div>
     </div>
+<!--Beginning of the body section-->
 <body>
-    <div class="bodyholder">
-
+    <div class="bodyholder"> Body holder
         <div class="bodysectionholder">
             <div class="bodysection"> body section</div>
             <div class="bodysection2"> body section 2</div>
