mess around with header portion

--- a/SP2.html
+++ b/SP2.html
@@ -3,12 +3,11 @@
 <head>
 <link rel="stylesheet" href="styling.css">
 </head>
-<!-- Header portion-->
 <header>
     <div class="headerholder"> 
             <div class="firstheaderhalfholder">
                 <!--Creates dropdown, need to understand the purpose of a button, when hovered over dropdown 1 it works-->
-                    <a href="index.html"> <button> Button </button></a>
+                <a href="index.html"> <button> Button </button></a>
                 <div class="dropdown1">
                     <button class="DDButton1">Dropdown</button>
                     <div class="DDB1content">
@@ -18,7 +17,7 @@
                       <a href="#">Link 3</a>
                     </div>
                 </div>
-                    <div class="dropdown1">
+                <div class="dropdown1">
                     <button class="DDButton1">Dropdown</button>
                     <div class="DDB1content">
                       <a href="#">Link 1</a>
@@ -31,19 +30,4 @@
             <div class="secondheaderhalfholder">second header half holder</div>
     </div>
 </header>
-<!--Beginning of the body section-->
-<body>
-    <div class="bodyholder"> Body holder
-        <div class="bodysectionholder">
-            <div class="bodysection"> body section</div>
-            <div class="bodysection2"> body section 2</div>
-        </div>
-    </div>
-    <div class="secondbodyholder">
-        <div class="secondbody">paragraph here</div>
-    </div>
-</body>
-<footer>
-    <div class="footersection"> footer section</div>
-</footer>
-</html>
+SUBPAGE 2
