Adjust part of the header section

--- a/index.html
+++ b/index.html
@@ -18,18 +18,31 @@
                       <a href="#">Link 3</a>
                     </div>
                 </div>
-                    <div class="dropdown1">
+                <div class="dropdown1">
                     <button class="DDButton1">Dropdown</button>
                     <div class="DDB1content">
-                      <a href="#">Link 1</a>
-                      <a href="#">Link 2</a>
+                      <a href="SP.html">Subpage 1</a>
+                      <a href="SP2.html">Subpage 2</a>
+                      <a href="#">Link 3</a>
                       <a href="#">Link 3</a>
                     </div>
-              </div>
-      </div>
+                </div>
+                <div class="dropdown1">
+                    <button class="DDButton1">Dropdown</button>
+                    <div class="DDB1content">
+                      <a href="SP.html">Subpage 1</a>
+                      <a href="SP2.html">Subpage 2</a>
+                      <a href="#">Link 3</a>
+                      <a href="#">Link 3</a>
+                    </div>
+                </div>
+                
+            </div> <!--Closes first header half-->
 <!--Second half of the header portion-->
-            <div class="secondheaderhalfholder">second header half holder</div>
-    </div>
+            <div class="secondheaderhalfholder">second header half holder
+                
+            </div>
+    </div> <!--Closes headerholder-->
 </header>
 <!--Beginning of the body section-->
 <body>
